# MCDA-5511-Group2-Assignment04

./: .gitignore  README.md  environment.yml  find_numeric_feature.py  main.py  pyproject.toml
data/: dataset_generator.py
features/: automated_interpretability.py  feature_analyzer.py  feature_extractor.py  intervention.py
models/: model_wrapper.py
sae/: sae_model.py  train_sae.py
utils/: helpers.py
